objects/ProgramEnrollment.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Absent_Benefit_Disbursements__c</fullName>
        <label>Number of Absent Benefit Disbursements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Attended_Benefit_Disbursements__c</fullName>
        <label>Number of Attended Benefit Disbursements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>